--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,3 +47,30 @@
 .hidden {
   display: none;
 }
+
+/* Tambahkan gaya scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.overflow-x-auto::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  background: transparent;
+}
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-color: transparent transparent;
+}
